--- a/works/works.html
+++ b/works/works.html
@@ -54,8 +54,8 @@
       <section id="works">
         <h2 id="background">背景</h2>
         <div class="works-content">
-          大学時代にWordPressでブログを書いていたことがあり、そのころにWeb系に興味を持ち始めました。<br>
-          そこでWordPressなどを自由にカスタマイズできるようになりたいと思い、WordPressで使用されているプログラミング言語のPHPを勉強しようと考えました。<br>
+          大学時代にWordPressでブログを書いていたことがあり、そのころにWeb関係に興味を持ち始めました。<br>
+          そこでWordPressなどを自由にカスタマイズできるようになりたいと思い、<br>WordPressで使用されているプログラミング言語のPHPを勉強しようと考えました。<br>
           そしてPHPの勉強のために簡易掲示板を作成することに決め、これをポートフォリオとすることにしました。
         </div>
         <h2 id="goal">目的</h2>
@@ -88,18 +88,23 @@
         </div>
         <h2 id="function">主な機能</h2>
         <div class="works-content">
-          <li>ニックネーム、メールアドレス、パスワードを設定し会員登録</li>
-          <li>アイコン写真のアップロードも可</li>
+          <li>ニックネーム、メールアドレス、パスワードを設定し会員登録<br>
+          アイコン写真のアップロードも可</li>
+          <img src="../images/join.PNG" class="image" style="width:80%; height:auto; padding-bottom: 40px;">
+          <li>会員登録の確認</li>
+          <img src="../images/check.PNG" class="image" style="width:80%; height:auto; padding-bottom: 40px;">
           <li>メールアドレスとパスワードでログイン</li>
+          <img src="../images/login.PNG" class="image" style="width:80%; height:auto; padding-bottom: 40px;">
           <li>ログアウト</li>
           <li>文章の投稿</li>
-          <li>投稿への返信機能</li>
+          <li>投稿の返信・削除</li>
+          <img src="../images/view.png" class="image" style="width:80%; height:auto; padding-bottom: 40px;">
         </div>
         <h2 id="process">開発手順</h2>
         <div class="works-content">
           <h4>要件定義</h4>
           <p>まず、今回制作するアプリに必要な機能を簡単にまとめる。</p>
-          <img src="../images/function.png" class="image">
+          <img src="../images/function.png" class="image" style="width:100%; height:auto;">
         </div>
         <div class="works-content">
           <h4>環境選定</h4>
@@ -107,7 +112,11 @@
         </div>
         <div class="works-content">
           <h4>データベース設計</h4>
-          <p>まず、今回制作するアプリに必要な機能を簡単にまとめる。</p>
+          <p>データベース設計では、どのような情報が必要か最初に簡単にまとめ、<br>
+          会員関係では、ニックネーム、パスワード、写真、<br>
+          投稿関係では、会員情報、投稿内容、返信先のメッセージ<br>
+          の情報が必要と考え会員関係をmembers、投稿関係をpostsとし、結果このようにまとまりました。</p>
+          <img src="../images/database.png" class="image" style="width:50%; height:auto;">
         </div>
         <h2 id="implement">機能実装</h2>
         <div class="works-content">
@@ -115,25 +124,55 @@
         </div>
         <div class="works-content">
           <h4>全体の形をHTMLで記述</h4>
-          <p>全体の形を具体化するためにHTMLで骨格作りをしました。</p>
+          <p>必要な機能をもとに、全体の形を具体化するためにHTMLで骨格作りをしました。</p>
         </div>
         <div class="works-content">
           <h4>PHPで内部設計</h4>
-          <p>データベース接続確認、SQL文発行、HTML通信</p>
+          <p>
+            データベース設計をもとにローカル環境のMySQLサーバにデータベースを作成。その後、テーブルを作成。
+          </p>
+          <p>
+            PDOを使ってデータベースに接続。<br>
+            この時、try~catchを用い、接続できているのか確認。
+          </p>
+          <p>
+            会員登録をする際に入力する情報はPOSTを用いた。この時、XSS対策として入力される情報に対してhtmlspecialchars関数でエスケープ処理をした。登録内容の確認画面では個人情報が含まれるので、Cookieではなくsessionを用いた。
+          </p>
         </div>
         <div class="works-content">
           <h4>CSS設計</h4>
-          <p>・・・</p>
+          <p>今回のCSSは、このアプリ作成の学習に参考にした<a href="https://www.amazon.co.jp/%E3%82%88%E3%81%8F%E3%82%8F%E3%81%8B%E3%82%8BPHP%E3%81%AE%E6%95%99%E7%A7%91%E6%9B%B8-%E3%80%90PHP7%E5%AF%BE%E5%BF%9C%E7%89%88%E3%80%91-%E3%81%9F%E3%81%AB%E3%81%90%E3%81%A1%E3%81%BE%E3%81%93%E3%81%A8/dp/4839964688">よくわかるPHPの教科書-【PHP7対応版】</a>を模写する形で作成した。</p>
         </div>
         <div class="works-content">
           <h4>Herokuデプロイ</h4>
-          <p>・・・</p>
+          <p>インフラ環境やOS、ソフトなどが揃っていて、すぐに開発を始められるHerokuでアプリを公開することにした。
+          </p>
+          <p>GitHubと連携できたので、GitHubにpushしたリポジトリをそこからHerokuにデプロイしました。
+          </p>
+          <p><a href="https://minibbs2020.herokuapp.com/login.php">Herokuに公開したアプリはこちら</a></p>
+          <p><a href="https://github.com/YusukeAimi/portfolio">GitHubはこちら</a></p>
         </div>
         <h2 id="subject">課題</h2>
-        <div class="works-content"></div>
+        <div class="works-content">
+          <h4>スマートフォンでの表示だと見にくい</h4>
+            <p>今回のcssは参考文献を模写して作ったが、パソコンでの表示にしか対応していないため、<br>スマートフォンで表示させた際に文字が小さく見にくい点や大きく表示されてしまうところがある。<br>時間がある時にでもスマートフォンやタブレットのサイズにも対応したものを作りたい。</p>
+        </div>
+        <div class="works-content">
+          <h4>アイコン写真が表示されない</h4>
+            <p>投稿直後は投稿者のアイコン写真が表示されるが、時間が経つと表示されなくなってしまう。<br>（自分の力不足で解決できず…）</p>
+        </div>
+        <div class="works-content">
+          <h4>機能が単純すぎる</h4>
+            <p>会員登録する際に、登録内容に入力間違いが無いよう確認する画面は作ったが、<br>会員登録後に登録内容を編集する機能もあったほうが便利だと感じた。</p>
+        </div>
+        <div class="works-content">
+          <h4>フレームワークを使用していない</h4>
+            <p>フレームワークの勉強をまだしていないため、今回は使用しませんでした。<br>実際の開発現場では、フレームワークを使用するのが通常であるという認識なので、<br>今後の課題にしていきたいです。</p>
+        </div>
         <h2 id="last">終わりに</h2>
         <div class="works-content">
-        <a href="https://github.com/YusukeAimi/portfolio">GitHubはこちら</a>
+          <p>今回初めてPHPを使用してアプリを作ったが、まだまだ分からないことばかりなので、<br>今後の課題を踏まえながら、意欲的に取り組んでいきたいです。<br>
+          次回はフレームワーク（Laravel）を用いて、より実用的なアプリを作成したいと考えています。</p>
         </div>
         <h2 id="reference">参考文献</h2>
         <div class="works-content">
