--- a/works/works.html
+++ b/works/works.html
@@ -92,7 +92,7 @@
           アイコン写真のアップロードも可</li>
           <img src="../images/join.PNG" class="image" style="width:80%; height:auto; padding-bottom: 40px;">
           <li>会員登録の確認</li>
-          <img src="../images/check.PNG" class="image" style="width:80%; height:auto; padding-bottom: 40px;">
+          <img src="../images/ok.PNG" class="image" style="width:80%; height:auto; padding-bottom: 40px;">
           <li>メールアドレスとパスワードでログイン</li>
           <img src="../images/login.PNG" class="image" style="width:80%; height:auto; padding-bottom: 40px;">
           <li>ログアウト</li>
