--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="effect">
               <p class="content">コンタクトフォームがありますので、こちらからお問合せください。</p>
             </div>
-            <a href="" class="linkbtn" style="text-decoration: none;">Contact</a>
+            <a href="contact.php" class="linkbtn" style="text-decoration: none;">Contact</a>
             <p class="content">※コンタクトフォームは現在作成中のため、使用できません。</p>
           </div>
           <div class="copyright" style="margin-bottom: 0%;">
