--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <p class="content">1996生まれ。<br>
                   現在HTML,CSS,PHPを中心に独学中。<br>
                   趣味は筋トレ、サッカー観戦。<br>
-                  来年中にベンチプレス100kgをあげられるサーバサイドエンジニアになれるよう頑張っています。</p>
+                  来年中にベンチプレス100kgをあげられるITエンジニアになれるよう頑張っています。</p>
               </div>
           </div>
         </div>
